# aws-sandbox

./: .gitignore  .pre-commit-config.yaml  Program Outline.md  README.md  add_hash_id.sql  athena_operations.py  create_table_lifter_with_id.sql  create_view_lifter_dedupe.sql  data_ingestion.py  deploy.sh  extract.py  extract_file_from_archive.py  extract_from_archive.py  extract_openpowerlifting.py  extract_openpowerlifting_lambda.py  ingestion.py  initialize_iceberg_table.py  initialize_opl_lifter_iceberg_table.sql  insert_into_iceberg_table.py  load.py  metadata.json  openpowerlifting_lifter_extraction.py  openpowerlifting_lifter_ingestion.py  openpowerlifting_lifter_prune_zip.py  opl_lifter_raw_ddl.sql  opl_pipeline.py  opl_pipeline_lambda.py  pipeline.py  prune_duplicate_files.py  prune_duplicates.py  pyproject.toml  transform.py
.scratch/: convert_to_parquet.py  iceberg_syntax.sql  lambda_design.txt  lf_grant_permission_gluenb_cleansed.json  log_design.txt  opl_columns.py  shell_commands.txt
data_ingestion/: load_deprecated.py
dbt_ingestion/: dbt_project.yml
dbt_tedsand/: dbt_project.yml
python/: convert_to_parquet.py  ingest_openpowerlifting.py  lambda_ingest_openpowerlifting.py  opl_pipeline.py  pydantic_test.py  shared-lib.py
sql/: data_ingest_log_iceberg_ddl.sql  data_process_log_iceberg_ddl.sql  openpowerlifting_iceberg_ddl.sql  processed_data_log_ddl.sql
streamlit/: athena_download.py  profiler.py
tf/: .terraform.lock.hcl  athena.tf  eventbridge.tf  glue.tf  glue_catalog.tf  glue_etl.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  sns.tf  (+3 more)
(+39 files in other folders)
