[project]
name = "aws-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.10.1",
    "dbt-athena-community>=1.8.4",
    "duckdb>=1.2.0",
    "jupyter>=1.1.1",
    "pydantic>=2.10.5",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
]
