[project]
name = "aws-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.11.0",
    "boto3>=1.35.90",
    "dbt-athena>=1.9.5",
    "dbt-core>=1.10.15",
    "duckdb>=1.2.0",
    "jupyter>=1.1.1",
    "pydantic>=2.10.5",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
